fix spacing for block explorer view. reduce header to 50px.

--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,6 @@ pre {
 
 .custom-modal-dark .ant-modal-header {
   background-color: #1f1f1f;
-  border-bottom: 1px solid #303030;
 }
 
 .custom-modal-dark .ant-modal-body {
